// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshort po startu 1`] = `
<div
  className="StopkyProTyp__panel--maraton panel panel-default"
>
  <div
    className="panel-heading"
  >
    <span
      style={
        Object {
          "fontSize": "100%",
        }
      }
    >
      <img
        alt="maraton"
        height={30}
        src="maraton.png"
        title="maraton"
      />
       
      maraton
    </span>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="StopkyProTyp__div"
    >
      <div
        className="StopkyProTyp__cudly"
      >
        <button
          className="Cudl btn btn-primary"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          +X
        </button>
      </div>
      <div />
      <div
        className="StopkyProTyp__cudly"
      >
        <button
          className="Cudl btn btn-primary"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          +X
        </button>
        <button
          className="Cudl btn btn-primary"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          +X
        </button>
      </div>
      <div />
      <div
        className="StopkyProTyp__cudly"
      >
        <button
          className="Cudl btn btn-primary"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          +X
        </button>
        <button
          className="Cudl btn btn-primary"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          +X
        </button>
      </div>
      <div />
      <div
        className="StopkyProTyp__cudly"
      >
        <button
          className="Cudl btn btn-primary"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          +X
        </button>
        <button
          className="Cudl btn btn-primary"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          +X
        </button>
      </div>
      <span
        className="Displej__segment"
      >
        0
      </span>
      <span
        className="Displej__separator"
      >
        :
      </span>
      <span
        className="Displej__segment"
      >
        00
      </span>
      <span
        className="Displej__separator"
      >
        :
      </span>
      <span
        className="Displej__segment"
      >
        00
      </span>
      <span
        className="Displej__separator"
      >
        ,
      </span>
      <span
        className="Displej__segment"
      >
        00
      </span>
      <div
        className="StopkyProTyp__cudly"
      >
        <button
          className="Cudl btn btn-primary"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          +X
        </button>
      </div>
      <div />
      <div
        className="StopkyProTyp__cudly"
      >
        <button
          className="Cudl btn btn-primary"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          +X
        </button>
        <button
          className="Cudl btn btn-primary"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          +X
        </button>
      </div>
      <div />
      <div
        className="StopkyProTyp__cudly"
      >
        <button
          className="Cudl btn btn-primary"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          +X
        </button>
        <button
          className="Cudl btn btn-primary"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          +X
        </button>
      </div>
      <div />
      <div
        className="StopkyProTyp__cudly"
      >
        <button
          className="Cudl btn btn-primary"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          +X
        </button>
        <button
          className="Cudl btn btn-primary"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          +X
        </button>
      </div>
    </div>
    <div
      className="StopkyProTyp__buttons btn-toolbar"
      role="toolbar"
    >
      <button
        className="btn btn-success"
        disabled={true}
        onClick={[MockFunction]}
        type="button"
      >
        Start
      </button>
      <button
        className="btn btn-warning"
        disabled={false}
        onClick={[MockFunction]}
        type="button"
      >
        Stop
      </button>
      <button
        className="StopkyProTyp__reset-button btn btn-danger"
        disabled={false}
        onClick={[MockFunction]}
        type="button"
      >
        Reset
      </button>
    </div>
    <div
      className="StopkyProTyp__rozdily"
    >
      <div
        className="StopkyProTyp__rozdily--nadpis"
      >
        Rozdíly:
      </div>
      <div
        className="Rozdily"
      >
        <div>
          maraton
        </div>
        <div>
          -
          :
          --
          :
          --
          ,
          --
        </div>
        <div>
          půlmaraton
        </div>
        <div>
          1
          :
          57
          :
          45
          ,
          40
        </div>
        <div>
          koloběžka
        </div>
        <div>
          0
          :
          14
          :
          46
          ,
          80
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`snapshot před startem 1`] = `
<div
  className="StopkyProTyp__panel--půlmaraton panel panel-default"
>
  <div
    className="panel-heading"
  >
    <span
      style={
        Object {
          "fontSize": "100%",
        }
      }
    >
      <img
        alt="půlmaraton"
        height={30}
        src="pulmaraton.png"
        title="půlmaraton"
      />
       
      půlmaraton
    </span>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="StopkyProTyp__div"
    >
      <div
        className="StopkyProTyp__cudly"
      >
        <button
          className="Cudl btn btn-primary"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          +X
        </button>
      </div>
      <div />
      <div
        className="StopkyProTyp__cudly"
      >
        <button
          className="Cudl btn btn-primary"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          +X
        </button>
        <button
          className="Cudl btn btn-primary"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          +X
        </button>
      </div>
      <div />
      <div
        className="StopkyProTyp__cudly"
      >
        <button
          className="Cudl btn btn-primary"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          +X
        </button>
        <button
          className="Cudl btn btn-primary"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          +X
        </button>
      </div>
      <div />
      <div
        className="StopkyProTyp__cudly"
      >
        <button
          className="Cudl btn btn-primary"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          +X
        </button>
        <button
          className="Cudl btn btn-primary"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          +X
        </button>
      </div>
      <span
        className="Displej__segment"
      >
        0
      </span>
      <span
        className="Displej__separator"
      >
        :
      </span>
      <span
        className="Displej__segment"
      >
        00
      </span>
      <span
        className="Displej__separator"
      >
        :
      </span>
      <span
        className="Displej__segment"
      >
        00
      </span>
      <span
        className="Displej__separator"
      >
        ,
      </span>
      <span
        className="Displej__segment"
      >
        00
      </span>
      <div
        className="StopkyProTyp__cudly"
      >
        <button
          className="Cudl btn btn-primary"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          +X
        </button>
      </div>
      <div />
      <div
        className="StopkyProTyp__cudly"
      >
        <button
          className="Cudl btn btn-primary"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          +X
        </button>
        <button
          className="Cudl btn btn-primary"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          +X
        </button>
      </div>
      <div />
      <div
        className="StopkyProTyp__cudly"
      >
        <button
          className="Cudl btn btn-primary"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          +X
        </button>
        <button
          className="Cudl btn btn-primary"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          +X
        </button>
      </div>
      <div />
      <div
        className="StopkyProTyp__cudly"
      >
        <button
          className="Cudl btn btn-primary"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          +X
        </button>
        <button
          className="Cudl btn btn-primary"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          +X
        </button>
      </div>
    </div>
    <div
      className="StopkyProTyp__buttons btn-toolbar"
      role="toolbar"
    >
      <button
        className="btn btn-success"
        disabled={false}
        onClick={[MockFunction]}
        type="button"
      >
        Start
      </button>
      <button
        className="btn btn-warning"
        disabled={true}
        onClick={[MockFunction]}
        type="button"
      >
        Stop
      </button>
      <button
        className="StopkyProTyp__reset-button btn btn-danger"
        disabled={false}
        onClick={[MockFunction]}
        type="button"
      >
        Reset
      </button>
    </div>
    <div
      className="StopkyProTyp__rozdily"
    >
      <div
        className="StopkyProTyp__rozdily--nadpis"
      >
        Rozdíly:
      </div>
      <div
        className="Rozdily"
      >
        <div>
          maraton
        </div>
        <div>
          -
          :
          --
          :
          --
          ,
          --
        </div>
        <div>
          půlmaraton
        </div>
        <div>
          1
          :
          57
          :
          45
          ,
          40
        </div>
        <div>
          koloběžka
        </div>
        <div>
          0
          :
          14
          :
          46
          ,
          80
        </div>
      </div>
    </div>
  </div>
</div>
`;
